2001-07-13  Ole Laursen  <olau@hardworking.dk>

	* NOTICE.da: Removed old notification file.

	* da.po: Updated Danish translation.

2001-06-28  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2001-07-11  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* POTFILES.in: Remove the gturing and scottfree files.

2001-07-07  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-07-06  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-07-05  Marius Andreiana  <mandreiana@yahoo.com>

        * zh_TW.Big5.po: Updated from R.I.P. Deaddog <maddog@linuxhall.org>

2001-07-05  Christian Rose  <menthos@menthos.com>

	* sv.po: Fixed Swedish translation. Thanks to
	Gvran Uddeborg <goeran@uddeborg.pp.se> for his continued review.

2001-07-01  Christian Rose  <menthos@menthos.com>

	* sv.po: Minor change in Swedish translation.

2001-06-30  Christian Rose  <menthos@menthos.com>

	* sv.po: Fixed Swedish translation. Thanks to
	Gvran Uddeborg <goeran@uddeborg.pp.se> for his review.

2001-06-30  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2001-06-28  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Remove all the .scm files until later. We
	aren't losing any strings anyway.
	* no.po: Updated Norwegian translation.

2001-06-27  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2001-06-20  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2001-06-20  Carlos Perells Marmn <carlos@gnome-db.org>

	* es.po: Changed some typos.

2001-06-01  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation.

2001-05-29  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Added aisleriot/SCHEME_GAMES.h.
	* no.po: Updated Norwegian translation.
	
2001-05-27  Sami Pesonen <spesonen@dlc.fi>

	* fi.po: Updated Finnish translation.

2001-05-25  Valek Filippov  <frob@df.ru>
