@@ -47,3 +47,7 @@ iagno/othello.c
 iagno/properties.c
 mahjongg/mahjongg.c
 same-gnome/same-gnome.c
+xbill/UI.cc
+xbill/Strings.h
+xbill/Game.cc
+xbill/x11-gtk.cc
