@@ -1,3 +1,7 @@
+2001-07-13  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* POTFILES.in: Added xbill files.
+
 2001-07-13  Ole Laursen  <olau@hardworking.dk>
 
 	* NOTICE.da: Removed old notification file.
